Align forms correctly

--- a/circle/includes/style.css
+++ b/circle/includes/style.css
@@ -110,7 +110,6 @@ li a:hover.navigation {
 
 /* ---- Forms ---- */
 form.login {
-  text-align: left;
   display: inline-block;
   padding: 10px, auto, 15px, auto;
   margin: 10px, auto, 10px, auto;
@@ -123,6 +122,10 @@ form.login {
 
 fieldset.login {
   border: 0;
+}
+
+div.login {
+  text-align: left;
 }
 
 input.login {
